FIX: Avoid overflow making tasks container bigger

--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -7,6 +7,7 @@
     gap: 20px;
     padding: 0;
     box-sizing: border-box;
+    overflow-y: hidden;
     /* display: 'flex', flexDirection: 'column', width: '95%', flexGrow: 1, maxHeight: '800px' */
 }
 
@@ -20,7 +21,7 @@
 
 .tasks-container{
     width: 80%;
-    max-height: 35%;
+    max-height: 55%;
     /* height: 100%; */
     display: block;
     flex-direction: column;
